# cs-assistant-fork

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  link-check.yml
data/webpages/: list.json  test_list.json
docker/postgres-init/: 01-create-test-db.sql
evals/: golden.yaml
scripts/: check_links.py  check_links_COPY.py  check_links_helper.py  ingest.py
src/apps/: dev_cli.py  discord_bot.py
src/completions/: prompts.py
src/completions/services/: completion_service.py
src/config/: __init__.py  celery.py  logger.py
src/domain/: types.py
src/infrastructure/: llm.py
src/infrastructure/db/: __init__.py  alembic.ini  env.py  models.py  repository.py
src/infrastructure/db/versions/: 0001_initial.py
src/ingestion/scrapers/: html_scraper.py
src/ingestion/services/: ingestion_service.py
src/retrieval/services/: embedding_service.py  retrieval_service.py
tests/: conftest.py  test_config.py
tests/infrastructure/db/: conftest.py  test_isolation.py  test_repository.py  test_schema.py
