[project]
name = "cs-assistant"
version = "0.1.0"
description = "RAG-based assistant for Carleton CS students"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2",
    "pydantic-settings",
    "sqlalchemy[asyncio]",
    "asyncpg",
    "pgvector",
    "alembic",
    "httpx",
    "trafilatura",
    "langchain-text-splitters",
    "celery",
    "redis",
    "discord-py>=2.7.1",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "black",
    "psycopg2-binary",
    "pre-commit>=4.6.0",
    "pytest-cov>=7.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/completions/prompts.py" = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"

[tool.coverage.run]
source = ["src"]
omit = ["src/infrastructure/db/versions/*"]
